--- a/parts/cppsupport/cppaddmethoddlgbase.ui
+++ b/parts/cppsupport/cppaddmethoddlgbase.ui
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>765</width>
-            <height>525</height>
+            <width>858</width>
+            <height>567</height>
         </rect>
     </property>
     <property name="caption">
@@ -133,6 +133,14 @@
                             </property>
                             <property name="text">
                                 <string>Signal</string>
+                            </property>
+                        </widget>
+                        <widget class="QRadioButton">
+                            <property name="name">
+                                <cstring>rbKonstruktor</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Konstruktor</string>
                             </property>
                         </widget>
                     </hbox>
